syntax = "proto2";

option java_package = "cn.infocore.protobuf";
option java_outer_classname = "CloudManagerAlarm";

/* enum begin */

/* common begin */
enum Command {
  Command_HeartBeat = 87000;


  /* login begin */
  Command_GetPublicKey = 0;
  Command_LoginCloudManager = 1;
  Command_SendDek = 2;

  /* login end */
  /* overview begin */

  Command_GetOverview = 100;
  Command_GetDataArkException = 101;
  Command_GetClientException = 102;
  Command_GetVirtualMachineException = 103;

  /* overview end */
  /* data ark management begin */

  Command_GetDataArks = 200;
  Command_GetDataArkDetail = 201;
  Command_CreateDataArkGroup = 202;
  Command_DeleteDataArkGroup = 203;
  Command_UpdateDataArkGroup = 204;
  Command_AddDataArk = 205;
  Command_RemoveDataArk = 206;
  Command_UpdateDataArk = 207;
  Command_MigrateDataArk = 208;
  Command_AddDisasterDataArk = 209;
  Command_RemoveDisasterDataArk = 210;
  Command_GetClients = 211;
  Command_AddClient = 212;
  Command_RemoveClient = 213;

  /* data ark management end */
  /* user management begin*/

  Command_GetUsers = 300;
  Command_CreateUserGroup = 301;
  Command_DeleteUserGroup = 302;
  Command_UpdateUserGroup = 303;
  Command_MigrateUserGroup = 304;
  Command_CreateUser = 305;
  Command_DeleteUser = 306;
  Command_UpdateUserPassword = 307;
  Command_ResetUserPassword = 308;
  Command_UpdateUser = 309;
  Command_GetUserQuota = 310;
  Command_UpdateUserQuota = 311;
  Command_UpdateUserUsedQuota = 312;
  Command_MigrateUser = 313;

  /* user management end */
  /* log begin */

  Command_GetAlarmLogs = 400;
  Command_UpdateAlarmLogProcessed = 401;
  Command_DeleteAlarmLog = 402;
  Command_GetOperationLogs = 403;

  /* log end */
  /* system begin */

  Command_GetEmailAlarm = 500;
  Command_UpdateEmailAlarm = 501;
  Command_CreateEmailAlarm = 502;  // 报警模块用
  Command_DeleteEmailAlarm = 503;  // 报警模块用
  Command_VerifyEmailAlarm = 504;

  /* system end */
}

enum ErrorCode {
  ErrorCode_Success = 0;
  ErrorCode_Failed = 1;

  ErrorCode_ConnectFailed = 10;  // 连接失败
  ErrorCode_SendFailed = 11;  // 发送失败
  ErrorCode_ReceiveFailed = 12;  // 接收失败
  ErrorCode_UnrecognizedOperation = 13;  // 未识别的操作
  ErrorCode_EnqueueCommandFailed = 14;  // 添加命令到队列失败
  ErrorCode_DequeueCommandFailed = 15;  // 从队里移除命令失败

  ErrorCode_ParametrError = 20;  // 参数错误
  ErrorCode_SerializeFailed = 21;  // 序列化失败，格式不对
  ErrorCode_DeserializeFailed = 22;  // 反序列化失败，格式不对
  Errorcode_PermissionDenied = 23;  // 没有权限
  ErrorCode_ConnectDatabaseFailed = 24;  // 连接数据库失败
  ErrorCode_OperateDatabaseFailed = 25;  // 执行数据库命令失败

  ErrorCode_AlreadyLogged = 60;  // 已经登录

  ErrorCode_CreateDataArkGroupFailed = 200;
  ErrorCode_DataArkGroupExistent = 201;
  ErrorCode_DeleteDataArkGroupFailed = 202;
  ErrorCode_UpdateDataArkGroupFailed = 203;
  ErrorCode_AddDataArkFailed = 204;
  ErrorCode_RemoveDataArkFailed = 205;
  ErrorCode_UpdateDataArkFailed = 206;

  ErrorCode_UserGroupExistent = 300;  // 已存在用户组
  ErrorCode_UserGroupNonexistent = 301;  // 不存在用户组
  ErrorCode_UserExistent = 302;
  ErrorCode_UserNonexistent = 303;  // 用户不存在
  ErrorCode_UserPasswordUnmatch = 304;  // 用户密码不匹配
  ErrorCode_CreateUserFailed = 305;  // 创建用户失败
  ErrorCode_DeleteUserFailed = 306;  // 删除用户失败
  // TODO(shen.zhiqiang): ErrorCode.

  ErrorCode_AlarmAddDataArkFailed = 10000;  // 报警模块添加数据方舟失败
  ErrorCode_AlarmRemoveDataArkFailed = 10001;  // 报警模块移除数据方舟失败
  ErrorCode_AlarmUpdateEmailAlarmFailed = 10002;  // 报警模块更新邮件报警失败
  ErrorCode_AlarmCreateEmailAlarmFailed = 10003;  // 报警模块创建邮件报警失败
  ErrorCode_AlarmDeleteEmailAlarmFailed = 10004;  // 报警模块删除邮件报警失败
  ErrorCode_AlarmVerifyEmailAlarmFailed = 10005;  // 报警模块验证邮件报警失败
}

enum Exception {
  Exception_Tmp = 0;
  Exception_ClientLocalLost = 1;  // 本地丢失
  Exception_ClientTargetLost = 2;  // 目标丢失
  Exception_ClientCreateSnapshotFailed = 3;  // 任务计划创建快照点失败(暂时不考虑普通客户端)
  Exception_VmwareCbtDrop = 4;  // CBT 异常
  Exception_ClientOffline = 5;  // 客户端离线
  Exception_VcenterOffline = 6;  // vCenter 离线
  Exception_NodeOffline = 7;  // 集群节点或 Rac 实例离线
  Exception_AllOffline = 8;  // 集群或 Rac 离线
  Exception_StreamerPoolException = 9;  // 存储池异常
  Exception_StreamerOffline = 10;  // Streamer 服务器离线
  Exception_ClientAutoExpandFailed = 11;  // 自动扩容失败
  Exception_ClientSnapshotMergeFailed = 12;  // 快照合并失败
  Exception_OracleStorageDrop = 13;  // Oracle 备份空间异常
  Exception_DisasterReplicationFailed = 14;  // 容灾复制失败
}

enum ClientType {
  ClientType_Single = 0;
  ClientType_VmwareVirtualMachine = 1;
  ClientType_Mscs = 2;
  ClientType_Rac = 3;
  ClientType_Vcenter = 4;
}

/* common end */

enum Version {
  option allow_alias = true;
  Version_Value = 1;
}

/* enum end */

/* message begin */
/* data ark management begin */

message AddDataArkRequest {
  required string id = 1;  // data ark id
}

message RemoveDataArkRequest {
  required string id = 1;  // data ark id
}

message UpdateDataArkRequest {
  required string id = 1;
  required string name = 2;
  required string ip = 3;
}

/* data ark management end */

/* system begin */

message UpdateEmailAlarmRequest {
  required string user_id = 1;  // 所属用户 ID
}

message CreateEmailAlarmRequest {
  required string user_id = 1;  // 所属用户 ID
}

message DeleteEmailAlarmRequest {
  required string user_id = 1;  // 所属用户 ID
}

message VerifyEmailAlarmRequest {
  required string sender_email = 1;
  required string smtp_address = 2;
  required uint32 smtp_port = 3;
  required bool is_ssl_encrypt_enabled = 4;
  required bool is_smtp_authentication = 5;
  required string smtp_user_id = 6;
  required string smtp_password = 7;
  repeated string receiver_emails = 8;
}

/* system end */
/* message end */
